fixed nav overlay z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,6 @@
 /* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
- */
+
+/* Global Styling */
 body{
   font-family: 'Montserrat';
 }
@@ -21,19 +17,32 @@ h4 {
   margin: 5px 0px 55px 0px;
 }
 
-nav ul a,
-nav .brand-logo {
-  color: #444;
-}
-
 p {
   line-height: 2rem;
 }
+
+.text-left {
+  text-align: justify;
+}
+/* End Global Styling */
+
+/* Side Navigation Styling */
+
+.side-nav a {
+  font-size: 18px;
+}
+
+.navbar-fixed {
+  z-index: 998 !important;
+}
+
+/* End Side Nav Styling */
 
 .button-collapse {
   color: #26a69a;
 }
 
+/* Parallax Styling */
 .parallax-container {
   min-height: 380px;
   line-height: 0;
@@ -44,12 +53,26 @@ p {
 .parallax-container .section {
   width: 100%;
 }
+/* End Parallax Styling */
 
 .logo-responsive {
   max-width: 50%;
   height: auto; 
 }
 
+.icon-block {
+  padding: 0 15px;
+}
+.icon-block .material-icons {
+  font-size: inherit;
+}
+
+.social-icon {
+  text-align: center;
+  padding-right: 0.5%;
+}
+
+/* Media Queries */
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
@@ -65,22 +88,7 @@ p {
     top: 0;
   }
 }
-
-.icon-block {
-  padding: 0 15px;
-}
-.icon-block .material-icons {
-  font-size: inherit;
-}
-
-.social-icon {
-  text-align: center;
-  padding-right: 0.5%;
-}
-
-.text-left {
-  text-align: justify;
-}
+/* End Media Queires */
 
 
 
